# falar

./: .gitignore  404.html  README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt  package-lock.json  package.json
.github/workflows/: deploy.yml
_next/static/IKyAqYRFzpspDyx-BQopF/: _buildManifest.js
_next/static/chunks/: 05lmq8514ybre.css  08_39faevtscl.css  0kn-q951ch8be.css  0vclhlvtzj-g-.js  17oojkwf_ru9n.js  24vsec2e_hvns.js  2cla3wf2nk5hf.js  2lif86ce2ztru.js  311rs-bfs0gc5.js  31rp7545cyzk5.css  34_xsecyk4p8h.js  3ev4aq97ykla_.css  3fep84nxqehyn.js  3jbqyxn4s73w2.js  3lyrvuecyz9qk.css  3nm-37k0-t5qh.css  3sen5nai0ui5h.js  turbopack-0kq1esz7ynebs.js
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
falar-web/: next.config.ts  package-lock.json  package.json
falar-web/src/app/: globals.css  layout.tsx  page.tsx
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  model.rs  transcribe.rs
