[package]
name = "falar"
version = "0.1.0"
description = "Falar — offline speech-to-text desktop app"
authors = ["ab17"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = { version = "0.16", features = [] }
symphonia = { version = "0.6", features = ["mp3", "aac", "vorbis", "flac", "ogg", "wav"] }
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
anyhow = "1"
